Started work on replacing Path with DataFile for loading data
This was work that started with the Android port and is continuing
now that loading data from URL(s) is being supported. The DataFile
is an abstract resource object which can be accessed as an
inputstream or as a Path (possibly after copying/downloading)